--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,20 @@ body {
   background: var(--background-color);
 }
 
+body::-webkit-scrollbar-track {
+  /* background-color: transparent; */
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: var(--text-color);
+  border-radius: 10px;
+}
+
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
 .bg-primary {
   background-color: var(--primary-color);
 }
